--- a/firstmakers.html
+++ b/firstmakers.html
@@ -25,7 +25,7 @@
 
 
 
-<script type="text/x-red" data-template-name="makers-sensor">
+<script type="text/x-red" data-template-name="firstmakers">
    <!-- data-template-name identifies the node type this is for              -->
 
    <!-- Each of the following divs creates a field in the edit dialog.       -->
@@ -45,19 +45,19 @@
 
 
 <!-- Next, some simple help text is provided for the node.                   -->
-<script type="text/x-red" data-help-name="makers-sensor">
+<script type="text/x-red" data-help-name="firstmakers">
    <!-- data-help-name identifies the node type this help is for             -->
    <!-- This content appears in the Info sidebar when a node is selected     -->
    <!-- The first <p> is used as the pop-up tool tip when hovering over a    -->
    <!-- node in the palette.                                                 -->
    <p>First Makers analog sensors</p>
-   <p>Outputs an object called <b>msg.sensors</b> containing each of the 6 analog sensors</p>
+   <p>When any input is received, gets values on firstmakers analogsensors and outputs them on msg.payload.</p>
 </script>
 
 <!-- Finally, the node type is registered along with all of its properties   -->
 <!-- The example below shows a small subset of the properties that can be set-->
 <script type="text/javascript">
-    RED.nodes.registerType('makers-sensor',{
+    RED.nodes.registerType('firstmakers',{
         category: 'makers',      // the palette category
         defaults: {             // defines the editable properties of the node
             name: {value:""},   //  along with default values.
@@ -68,7 +68,7 @@
         // set the icon (held in icons dir below where you save the node)
         icon: "myicon.png",     // saved in  icons/myicon.png
         label: function() {     // sets the default label contents
-            return this.name||"Fisrt Makers Sensors";
+            return this.name||"First Makers";
         },
         labelStyle: function() { // sets the class to apply to the label
             return this.name?"node_label_italic":"";
@@ -77,77 +77,3 @@
 </script>
 
 
-
-<script type="text/x-red" data-template-name="makers-slt">
-   <!-- data-template-name identifies the node type this is for              -->
-
-   <!-- Each of the following divs creates a field in the edit dialog.       -->
-   <!-- Generally, there should be an input for each property of the node.   -->
-   <!-- The for and id attributes identify the corresponding property        -->
-   <!-- (with the 'node-input-' prefix).                                     -->
-   <!-- The available icon classes are defined Twitter Bootstrap glyphicons  -->
-
-    <br/>
-    <!-- By convention, most nodes have a 'name' property. The following div -->
-    <!-- provides the necessary field. Should always be the last option      -->
-    <div class="form-row">
-        <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
-        <input type="text" id="node-input-name" placeholder="Name">
-    </div>
-</script>
-
-
-<!-- Next, some simple help text is provided for the node.                   -->
-<script type="text/x-red" data-help-name="makers-slt">
-   <!-- data-help-name identifies the node type this help is for             -->
-   <!-- This content appears in the Info sidebar when a node is selected     -->
-   <!-- The first <p> is used as the pop-up tool tip when hovering over a    -->
-   <!-- node in the palette.                                                 -->
-   <p>First Makers analog sensors</p>
-   <p>Outputs an object called <b>msg.sensors</b> containing each of the 6 analog sensors</p>
-</script>
-
-<!-- Finally, the node type is registered along with all of its properties   -->
-<!-- The example below shows a small subset of the properties that can be set-->
-<script type="text/javascript">
-    RED.nodes.registerType('makers-slt',{
-        category: 'makers',      // the palette category
-        defaults: {             // defines the editable properties of the node
-            name: {value:""},   //  along with default values.
-        },
-        color:"#1E90FF",
-        inputs:1,               // set the number of inputs - only 0 or 1
-        outputs:1,              // set the number of outputs - 0 to n
-        // set the icon (held in icons dir below where you save the node)
-        icon: "myicon.png",     // saved in  icons/myicon.png
-        label: function() {     // sets the default label contents
-            return this.name||"Fisrt Makers SLT";
-        },
-        labelStyle: function() { // sets the class to apply to the label
-            return this.name?"node_label_italic":"";
-        }
-    });
-</script>
-
-
-
-
-<script type="text/x-red" data-template-name="makers-board">
-    <div class="form-row">
-        <label for="node-config-input-port"><i class="icon-bookmark"></i> Port</label>
-        <input type="text" id="node-config-input-port">
-    </div>
-</script>
-
-
-<script type="text/javascript">
-    RED.nodes.registerType('makers-board',{
-        category: 'config',
-        defaults: {
-            port: {value:"/notdefined"},
-        },
-        label: function() {
-            return this.port;
-        }
-    });
-</script>
